  character to Word.

- New namespace, assert methods and classes added to support writing
  unit tests.
  - assertParseResultsEquals
  - assertParseAndCheckList
  - assertParseAndCheckDict
  - assertRunTestResults
  - assertRaisesParseException
  - reset_pyparsing_context context manager, to restore pyparsing
    config settings

- Enhanced the Regex class to be compatible with re's compiled with the
  re-equivalent regex module. Individual expressions can be built with
  regex compiled expressions using:

    import pyparsing as pp
    import regex

    # would use regex for this expression
    integer_parser = pp.Regex(regex.compile(r'\d+'))

  Inspired by PR submitted by bjrnfrdnnd on GitHub, very nice!

- Fixed handling of ParseSyntaxExceptions raised as part of Each
  expressions, when sub-expressions contain '-' backtrack
  suppression. As part of resolution to a question posted by John
  Greene on StackOverflow.

- Potentially *huge* performance enhancement when parsing Word
  expressions built from pyparsing_unicode character sets. Word now
  internally converts ranges of consecutive characters to regex
  character ranges (converting "0123456789" to "0-9" for instance),
  resulting in as much as 50X improvement in performance! Work
  inspired by a question posted by Midnighter on StackOverflow.

- Improvements in select_parser.py, to include new SQL syntax
  from SQLite. PR submitted by Robert Coup, nice work!

- Fixed bug in PrecededBy which caused infinite recursion, issue #127
  submitted by EdwardJB.

- Fixed bug in CloseMatch where end location was incorrectly
  computed; and updated partial_gene_match.py example.

- Fixed bug in indentedBlock with a parser using two different
  types of nested indented blocks with different indent values,
  but sharing the same indent stack, submitted by renzbagaporo.

- Fixed bug in Each when using Regex, when Regex expression would
  get parsed twice; issue #183 submitted by scauligi, thanks!
